# TiledDeferredShading

./: .gitignore  CMakeLists.txt  GeometryPass.fs  GeometryPass.vs  LightCulling.cs.glsl  LightingPass.fs  glad.cpp  main.cpp  makefile  model.h  shader.h
assimp/lib/cmake/assimp-5.0/: assimpTargets.cmake
assimp/lib/pkgconfig/: assimp.pc
resources/backpack/: backpack.mtl
